# extracta-backend

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
app/: constants.py  enums.py  main_api.py  models.py  worker.py
app/api/: backend_api.py
app/api/v1/: documents.py  users.py
app/core/: config.py  logger.py
app/models/: documents.py
app/utils/: worker.py
